<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.SetDestination">

    <ScrollView
        android:id="@+id/scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="7.4:3.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_art_navigation" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/set_your_destination_coordinates"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/dark_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/longitude_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/text_color"
                android:hint="@string/set_longitude"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintBottom_toTopOf="@id/latitude_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/latitude_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/text_color"
                android:hint="@string/set_latitude"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                app:layout_constraintBottom_toTopOf="@+id/set_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude_input" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/set_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/background_button_curve"
                android:text="@string/set"
                android:textColor="@color/dark_blue"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>


